Fix truncation issue with smaller devices

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -33,7 +33,7 @@ nav {
   height: 90px;
   justify-content: space-between;
   align-items: center;
-  padding: 0 158px;
+  padding: 0 200px;
   position: absolute;
 }
 
@@ -173,35 +173,37 @@ h2.sidebar-logo {
 .hero {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   color: #ececec;
   font-size: 2.5rem;
-  padding: 100px 150px 50px 150px;
-  padding-top: 100px;
-  gap: 100px;
+  padding: 100px 200px;
+  gap: 80px;
 }
 
-@media (max-width: 1000px) {
-  .hero {
+@media (max-width: 1250px) {
+  header.hero {
     flex-direction: column;
     padding: 80px 20px;
     align-items: center;
+    justify-content: center;
     text-align: center;
   }
 }
 
 .hero div:last-child {
-  width: 100%;
+  width: 500px;
   height: 500px;
+}
+
+.hero .hero-img {
   background: url("https://images.unsplash.com/photo-1588064643233-49210b27b82e?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
-  background-position: center;
+  background-position: left;
 }
 
 .hero-text {
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 100%;
 }
 
 .hero-title span {
